team text size fix

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -58,7 +58,7 @@
 
   <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
 
-  <symbol id="close-small" viewBox="0 0 11 11"><path d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z"/></symbol>
+  <symbol id="close-micro bold" viewBox="0 0 11 11"><path d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z"/></symbol>
 
   <symbol id="arrow-left" viewBox="0 0 31 72"><path d="M30 72c-.3 0-.6-.1-.8-.4l-29-34c-.3-.4-.3-.9 0-1.3l29-36c.3-.4 1-.5 1.4-.2.4.3.5 1 .2 1.4l-28.5 35.5 28.5 33.4c.4.4.3 1.1-.1 1.4-.2.1-.5.2-.7.2z"/></symbol>
 
@@ -125,7 +125,7 @@
 	<nav class="panel top forceMobileView white soft-shadow">
 		<div class="sections desktop">
 			<div class="left">
-				<ul class="menu crop small bold">
+				<ul class="menu crop micro bold bold">
 					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
@@ -135,7 +135,7 @@
 				<a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
-				<ul class="menu crop small bold">
+				<ul class="menu crop micro bold bold">
 					<li><a href="../om_oss/">Om oss</a></li>
 					<li><a href="../kontakt/">Kontakt</a></li>
 					<li><a href="../mer/">Mer</a></li>
@@ -245,32 +245,32 @@
 							<img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Marie Selling</h3>
               <div class="ae-6">
-								<p class="small">Projekt & Ekonomichef</p>
-								<a href="mailto:marie@besiktningsman.se"><p class="small text-blue">marie@besiktningsman.se</p></a>
+								<p class="micro bold">Projekt & Ekonomichef</p>
+								<a href="mailto:marie@besiktningsman.se"><p class="micro bold text-blue">marie@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Björn Selling</h3>
               <div class="ae-6">
-								<p class="small">Affärschef</p>
-								<a href="mailto:bjorn@besiktningsman.se"><p class="small text-blue">bjorn@besiktningsman.se</p></a>
+								<p class="micro bold">Affärschef</p>
+								<a href="mailto:bjorn@besiktningsman.se"><p class="micro bold text-blue">bjorn@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-6">Jonny Seidel</h3>
               <div class="ae-7">
-								<p class="small">VD</p>
-								<a href="mailto:jonny@besiktningsman.se"><p class="small text-blue">jonny@besiktningsman.se</p></a>
+								<p class="micro bold">VD</p>
+								<a href="mailto:jonny@besiktningsman.se"><p class="micro bold text-blue">jonny@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-7">Martin Viberg</h3>
               <div class="ae-8">
-								<p class="small">Besiktningschef & Besiktningsman</p>
-								<a href="mailto:martin@besiktningsman.se"><p class="small text-blue">martin@besiktningsman.se</p></a>
+								<p class="micro bold">Besiktningschef & Besiktningsman</p>
+								<a href="mailto:martin@besiktningsman.se"><p class="micro bold text-blue">martin@besiktningsman.se</p></a>
 							</div>
             </li>
           </ul>
@@ -281,27 +281,27 @@
 							<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-5">Madeleine Müller</h3>
               <div class="ae-6">
-								<p class="small">Projektansvarig Storkund</p>
-								<a href="mailto:madeleine@besiktningsman.se"><p class="small text-blue">madeleine@besiktningsman.se</p></a>
+								<p class="micro bold">Projektansvarig Storkund</p>
+								<a href="mailto:madeleine@besiktningsman.se"><p class="micro bold text-blue">madeleine@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/nalle_gellermark.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Nalle Gellermark</h3>
-              <div class="ae-6"><p class="small">Projektansvarig Privatpersoner</p></div>
-							<a href="mailto:nalle@besiktningsman.se"><p class="small text-blue">nalle@besiktningsman.se</p></a>
+              <div class="ae-6"><p class="micro bold">Projektansvarig Privatpersoner</p></div>
+							<a href="mailto:nalle@besiktningsman.se"><p class="micro bold text-blue">nalle@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/ph_f.png" alt="Image Thumbnail"/>
               <h3 class="ae-6">Carina Sandgren</h3>
-              <div class="ae-7"><p class="small">Projektassistent</p></div>
-							<a href="mailto:carina@besiktningsman.se"><p class="small text-blue">carina@besiktningsman.se</p></a>
+              <div class="ae-7"><p class="micro bold">Projektassistent</p></div>
+							<a href="mailto:carina@besiktningsman.se"><p class="micro bold text-blue">carina@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/susanne_pm.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-7">Susanne Linder</h3>
-              <div class="ae-8"><p class="small">Redovisningsekonom</p></div>
-							<a href="mailto:susanne@besiktningsman.se"><p class="small text-blue">susanne@besiktningsman.se</p></a>
+              <div class="ae-8"><p class="micro bold">Redovisningsekonom</p></div>
+							<a href="mailto:susanne@besiktningsman.se"><p class="micro bold text-blue">susanne@besiktningsman.se</p></a>
             </li>
           </ul>
 					<!--  List three -->
@@ -311,27 +311,27 @@
 							<img class="img-91 wide" src="../assets/img/team/olof_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-5">Olof Johansson</h3>
               <div class="ae-6">
-								<p class="small">Besiktningsman, yeeeeahh</p>
-								<a href="mailto:olof@besiktningsman.se"><p class="small text-blue">olof@besiktningsman.se</p></a>
+								<p class="micro bold">Besiktningsman, yeeeeahh</p>
+								<a href="mailto:olof@besiktningsman.se"><p class="micro bold text-blue">olof@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/rickard_bjork.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Rickard Björk</h3>
-              <div class="ae-6"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:rickard@besiktningsman.se"><p class="small text-blue">rickard@besiktningsman.se</p></a>
+              <div class="ae-6"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:rickard@besiktningsman.se"><p class="micro bold text-blue">rickard@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/leif_berg.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-6">Leif Berg</h3>
-              <div class="ae-7"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:leif@besiktningsman.se"><p class="small text-blue">leif@besiktningsman.se</p></a>
+              <div class="ae-7"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:leif@besiktningsman.se"><p class="micro bold text-blue">leif@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/magnus_engstrom.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-7">Magnus Engström</h3>
-              <div class="ae-8"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:magnus@besiktningsman.se"><p class="small text-blue">magnus@besiktningsman.se</p></a>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:magnus@besiktningsman.se"><p class="micro bold text-blue">magnus@besiktningsman.se</p></a>
             </li>
           </ul>
 					<!--  List four -->
@@ -340,27 +340,27 @@
 							<img class="img-91 wide" src="../assets/img/team/jose_escobar.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Jose Escobar</h3>
               <div class="ae-6">
-								<p class="small">Besiktningsman</p>
-								<a href="mailto:jose@besiktningsman.se"><p class="small text-blue">jose@besiktningsman.se</p></a>
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jose@besiktningsman.se"><p class="micro bold text-blue">jose@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/lasse_grandahl.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-5">Lasse Grandahl</h3>
-              <div class="ae-6"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:rickard@besiktningsman.se"><p class="small text-blue">lasse@besiktningsman.se</p></a>
+              <div class="ae-6"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:rickard@besiktningsman.se"><p class="micro bold text-blue">lasse@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/orjan_hoglund.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-6">Örjan Höglund</h3>
-              <div class="ae-7"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:orjan@besiktningsman.se"><p class="small text-blue">orjan@besiktningsman.se</p></a>
+              <div class="ae-7"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:orjan@besiktningsman.se"><p class="micro bold text-blue">orjan@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/charlie_hoglund.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-7">Charlie Höglund</h3>
-              <div class="ae-8"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:charlie@besiktningsman.se"><p class="small text-blue">charlie@besiktningsman.se</p></a>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:charlie@besiktningsman.se"><p class="micro bold text-blue">charlie@besiktningsman.se</p></a>
             </li>
           </ul>
 					<!--  List five -->
@@ -369,27 +369,27 @@
 							<img class="img-91 wide" src="../assets/img/team/jeanette_immo.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Jeanette Immo</h3>
               <div class="ae-6">
-								<p class="small">Besiktningsman</p>
-								<a href="mailto:jeanette@besiktningsman.se"><p class="small text-blue">jeanette@besiktningsman.se</p></a>
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jeanette@besiktningsman.se"><p class="micro bold text-blue">jeanette@besiktningsman.se</p></a>
 							</div>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/dan_jakobsson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-5">Dan Jakobsson</h3>
-              <div class="ae-6"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:dan@besiktningsman.se"><p class="small text-blue">dan@besiktningsman.se</p></a>
+              <div class="ae-6"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:dan@besiktningsman.se"><p class="micro bold text-blue">dan@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/ulf_johansson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-6">Ulf johansson</h3>
-              <div class="ae-7"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:ulf@besiktningsman.se"><p class="small text-blue">ulf@besiktningsman.se</p></a>
+              <div class="ae-7"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:ulf@besiktningsman.se"><p class="micro bold text-blue">ulf@besiktningsman.se</p></a>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/ari_laukka.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-7">Ari Laukka</h3>
-              <div class="ae-8"><p class="small">Besiktningsman</p></div>
-							<a href="mailto:ari@besiktningsman.se"><p class="small text-blue">ari@besiktningsman.se</p></a>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:ari@besiktningsman.se"><p class="micro bold text-blue">ari@besiktningsman.se</p></a>
             </li>
           </ul>
         </div>
