last commit changed menu size, fixed

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -125,7 +125,7 @@
 	<nav class="panel top forceMobileView white soft-shadow">
 		<div class="sections desktop">
 			<div class="left">
-				<ul class="menu crop micro bold bold">
+				<ul class="menu crop small bold">
 					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
@@ -135,7 +135,7 @@
 				<a href="/"> <img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
-				<ul class="menu crop micro bold bold">
+				<ul class="menu crop small bold">
 					<li><a href="../om_oss/">Om oss</a></li>
 					<li><a href="../kontakt/">Kontakt</a></li>
 					<li><a href="../mer/">Mer</a></li>
