--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -232,15 +232,15 @@
 <section class="slide fade kenBurns whiteSlide">
   <div class="content">
     <div class="container">
-      <div class="wrap">
+      <div class="wrap left">
 
-        <div class="fix-10-12 toCenter">
+        <div class="fix-12-12">
           <h1 class="ae-1">Vilka vi är</h1>
 					<p class="bold">Ledning</p>
         </div>
         <div class="fix-12-12">
 					<!--  List one -->
-          <ul class="flex fixedSpaces later left">
+          <ul class="flex fixedSpaces later left margin-bottom-5">
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail"/>
               <h3 class="ae-5">Marie Selling</h3>
@@ -276,7 +276,7 @@
           </ul>
 					<!--  List two -->
 					<p class="bold">Projektavdelning</p>
-          <ul class="flex fixedSpaces later left">
+          <ul class="flex fixedSpaces later left  margin-bottom-5">
             <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
 							<img class="img-91 wide" src="../assets/img/team/madeleine_muller.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
               <h3 class="ae-5">Madeleine Müller</h3>
@@ -390,6 +390,70 @@
               <h3 class="ae-7">Ari Laukka</h3>
               <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
 							<a href="mailto:ari@besiktningsman.se"><p class="micro bold text-blue">ari@besiktningsman.se</p></a>
+            </li>
+          </ul>
+					<!--  List six -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/robert_lindbom.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Robert Lindbom</h3>
+              <div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:robert@besiktningsman.se"><p class="micro bold text-blue">robert@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/konrad_stockenvall.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Konrad Stockenvall</h3>
+              <div class="ae-6"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:konrad@besiktningsman.se"><p class="micro bold text-blue">konrad@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/goran_svensson.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Göran Svensson</h3>
+              <div class="ae-7"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:goran@besiktningsman.se"><p class="micro bold text-blue">goran@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/margareta_telkert.jpg" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Margareta Telkert</h3>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:margareta@besiktningsman.se"><p class="micro bold text-blue">margareta@besiktningsman.se</p></a>
+            </li>
+          </ul>
+					<!--  List six -->
+          <ul class="flex fixedSpaces later left">
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/jim_lofgren.jpg" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Jim Löfgren</h3>
+              <div class="ae-6">
+								<p class="micro bold">Besiktningsman</p>
+								<a href="mailto:jim@besiktningsman.se"><p class="micro bold text-blue">jim@besiktningsman.se</p></a>
+							</div>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/leo_simic.jpg" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-5">Leo Simic</h3>
+              <div class="ae-6"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:leo@besiktningsman.se"><p class="micro bold text-blue">leo@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width:257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-6">Birger Faith-Ell</h3>
+              <div class="ae-7"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:birger@besiktningsman.se"><p class="micro bold text-blue">birger@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Anders Widman</h3>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:anders@besiktningsman.se"><p class="micro bold text-blue">anders@besiktningsman.se</p></a>
+            </li>
+            <li class="col-3-12 col-tablet-1-2 col-phone-1-1">
+							<img class="img-91 wide" src="../assets/img/team/ph_m.png" style="width: 257px !important;" alt="Image Thumbnail"/>
+              <h3 class="ae-7">Niklas Josefsson</h3>
+              <div class="ae-8"><p class="micro bold">Besiktningsman</p></div>
+							<a href="mailto:niklas@besiktningsman.se"><p class="micro bold text-blue">niklas@besiktningsman.se</p></a>
             </li>
           </ul>
         </div>
