Policy block added

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -228,7 +228,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- Slide #91 -->
+	<!-- team -->
 	<section class="slide whiteSlide margin-bottom-5">
 		<div class="content">
 			<div class="container-lg">
@@ -598,7 +598,70 @@
 				</div>
 			</div>
 	</section>
+	<section class="slide whiteSlide margin-top-1 margin-bottom-5">
+		<div class="content">
+			<div class="container-lg">
+				<div class="wrap">
 
+					<div class="fix-12-12">
+						<ul class="flex left">
+							<li class="col-10-12 fromBottomLeft">
+								<h1 class="ae-2">Våra policys</h1>
+								<h2>Miljö</h2>
+								<ul class="flex">
+									<li class="col-12-12">
+										<h3>Besiktningsman.se besiktar alla typer av fastigheter och inom alla fack. Vi arbetar över hela landet och strävar efter att aktivt minska miljöpåverkan.</h3>
+									</li>
+									<li class="col-12-12">
+										<p class="small">
+										Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
+										<br>
+										<br>
+										I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
+										<br>
+										<br>
+										Våra miljömål ska baseras på vår miljöpåverkan, kontinuerligt följas upp och anpassas till verksamheten.
+										<br>
+										<br>
+										Råvaror och energi ska utnyttjas så effektivt som möjligt. Återanvändning och återvinning skall underlättas.
+										<br>
+										<br>
+										Alla anställda är väl informerade om hur vi tillsammans kan påverka och förbättra miljön omkring oss. Genom denna inriktning vill vi bidra till en bättre omvärld samt göra företaget mer attraktivt för anställda, samarbetspartners samt kunder.
+										</p>
+									</li>
+								</ul>
+								<h2>Jämställdhet</h2>
+								<ul class="flex">
+									<li class="col-12-12">
+										<h3>Besiktningsman.se Sverige AB arbetar strategiskt med att organisera och leda verksamheten utifrån grundsynen om alla människors lika värde.
+											  Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
+									</li>
+									<li class="col-12-12">
+										<p class="small">
+											Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
+											<br>
+											<br>
+											Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
+											<ul>
+												<li><p class="small">• Man – Kvinna</p></li>
+												<li><p class="small">• Ung – Gammal</p></li>
+												<li><p class="small">• Olika kulturella bakgrunder</p></li>
+												<li><p class="small">• Olika kompetenser</p></li>
+												<li><p class="small">• Geografisk spridning</p></li>
+											</ul>
+											<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
+										</p>
+									</li>
+								</ul>
+							</li>
+
+						</ul>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<!-- Slide 2 (#56) -->
 	<section class="slide whiteSlide" style="background: rgba(246, 247, 249, 0.64);">
