finished touches to the about page, good to go for now

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -218,6 +218,9 @@
 										<p>Våra besiktningsmän är välutbildade av SBR och har en gedigen erfarenhet inom byggsektorn och olika former av besiktningar. <br><br>Samtliga besiktningsmän genomgår årligen flertal kompetenshöjande utbildningar såväl internt som kurser & symposium
 											anordnade av ansvariga branschorganisationer.</p>
 									</li>
+									<li>
+										<button class="common-Button blue text-white popupTrigger" data-popup-id="text" style="margin: 0px 0px 25px 25px;">Våra policys</button>
+									</li>
 								</ul>
 							</li>
 
@@ -229,7 +232,7 @@
 		</div>
 	</section>
 	<!-- team -->
-	<section class="slide whiteSlide margin-bottom-5">
+	<section class="slide whiteSlide margin-bottom-5" id="team">
 		<div class="content">
 			<div class="container-lg">
 				<div class="wrap left">
@@ -598,70 +601,168 @@
 				</div>
 			</div>
 	</section>
-	<section class="slide whiteSlide margin-top-1 margin-bottom-5">
-		<div class="content">
-			<div class="container-lg">
-				<div class="wrap">
+<!-- Slide #68 -->
+<section class="slide whiteSlide margin-bottom-10">
+  <div class="content">
+    <div class="container-lg">
+      <div class="wrap">
 
-					<div class="fix-12-12">
-						<ul class="flex left">
-							<li class="col-10-12 fromBottomLeft">
-								<h1 class="ae-2">Våra policys</h1>
-								<h2>Miljö</h2>
-								<ul class="flex">
-									<li class="col-12-12">
-										<h3>Besiktningsman.se besiktar alla typer av fastigheter och inom alla fack. Vi arbetar över hela landet och strävar efter att aktivt minska miljöpåverkan.</h3>
-									</li>
-									<li class="col-12-12">
-										<p class="small">
-										Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
-										<br>
-										<br>
-										I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
-										<br>
-										<br>
-										Våra miljömål ska baseras på vår miljöpåverkan, kontinuerligt följas upp och anpassas till verksamheten.
-										<br>
-										<br>
-										Råvaror och energi ska utnyttjas så effektivt som möjligt. Återanvändning och återvinning skall underlättas.
-										<br>
-										<br>
-										Alla anställda är väl informerade om hur vi tillsammans kan påverka och förbättra miljön omkring oss. Genom denna inriktning vill vi bidra till en bättre omvärld samt göra företaget mer attraktivt för anställda, samarbetspartners samt kunder.
-										</p>
-									</li>
-								</ul>
-								<h2>Jämställdhet</h2>
-								<ul class="flex">
-									<li class="col-12-12">
-										<h3>Besiktningsman.se Sverige AB arbetar strategiskt med att organisera och leda verksamheten utifrån grundsynen om alla människors lika värde.
-											  Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
-									</li>
-									<li class="col-12-12">
-										<p class="small">
-											Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
-											<br>
-											<br>
-											Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
-											<ul>
-												<li><p class="small">• Man – Kvinna</p></li>
-												<li><p class="small">• Ung – Gammal</p></li>
-												<li><p class="small">• Olika kulturella bakgrunder</p></li>
-												<li><p class="small">• Olika kompetenser</p></li>
-												<li><p class="small">• Geografisk spridning</p></li>
-											</ul>
-											<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
-										</p>
-									</li>
-								</ul>
-							</li>
+        <div class="fix-12-12 left">
+          <h1 class="ae-1">Några av våra uppdragsgivare</h1>
+          <p>Vi utför årligen ett stort antal besiktningar åt konsumenter som har byggt nytt eller renoverat såsom ägare till enskilda småhus eller är bostadsrättsinnehavare.</p>
+					<p>Småhustillverkare</p>
+					<p>100-tals bostadsrättsföreningar</p>
+					<p>Ett betydande antal företag inom bygg och fastighet.</p>
+					<p>Utför ett stort antal uppdrag åt advokatbyråer i samband med tvister.</p>
+        </div>
+        <div class="fix-12-12">
+          <!-- remove class tintLogos to disable color change of logo images -->
+          <ul class="grid equal later">
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-3">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/ssm.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-4">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-5">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/sb.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-6">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/ikano-bostad.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-7">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/sollentunahem.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-8">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/ffab.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-3">
+                <div class="cell">
+                 <img width="120" src="../assets/img/logos/ncc.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-4">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/em.jpg" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-5">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/peab.jpg" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-6">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/niras.gif" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-7">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/ebab-logo.png" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-8">
+                <div class="cell">
+                  <img width="120" src="../assets/img/logos/nordea.svg" alt="Svenska Bostäder"/>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
 
-						</ul>
-					</div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="slide whiteSlide margin-bottom-10">
+  <div class="content">
+    <div class="container-lg">
+      <div class="wrap">
 
-				</div>
-			</div>
-		</div>
-	</section>
+        <div class="fix-12-12 toCenter left margin-bottom-5">
+          <h1 class="ae-1">Samarbetspartners</h1>
+        </div>
+        <div class="fix-12-12">
+          <!-- remove class tintLogos to disable color change of logo images -->
+          <ul class="grid">
+            <li class="col-2-12">
+							<a href="http://pedersen.se/"  target="_blank">
+		            <div class="table wide equalElement ae-3">
+		              <div class="cell">
+		                	<img src="../assets/img/logos/pedersen.jpg" alt="Pedersen"/>
+		              </div>
+		            </div>
+							</a>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-4">
+								<a href="http://lmlaw.se/" target="_blank">
+	                <div class="cell">
+	                  <img width="" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW"/>
+	                </div>
+								</a>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-5">
+								<a href="http://www.hifab.se/" target="_blank">
+									<div class="cell">
+	                  <img width="100" src="../assets/img/logos/hifab.jpg" alt="Hifab"/>
+	                </div>
+								</a>
+              </div>
+            </li>
+            <li class="col-2-12">
+              <div class="table wide equalElement ae-6">
+								<a href="icontrolapp.se" target="_blank">
+									<div class="cell">
+	                  <img width="" src="../assets/img/logos/icontrol.png" alt="iControl"/>
+	                </div>
+								</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
 
 	<!-- Slide 2 (#56) -->
 	<section class="slide whiteSlide" style="background: rgba(246, 247, 249, 0.64);">
@@ -702,24 +803,61 @@
 		</div>
 	</section>
 
-	<!-- Email Form Dialog -->
-	<div class="dialog hidden" data-dialog-id="form" data-on-submit-acton="close" data-set-cookie="30">
-		<div class="close" data-dialog-action="close"></div>
-		<div class="dialogContent">
-			<div class="text center">
-				<strong>Hejsan!</strong>, skriv gärna upp dig på vårt nyhetsbrev för att följa vår resa.
+<!-- Popup Text -->
+<div class="popup animated" data-popup-id="text">
+	<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+	<div class="content popupContent">
+		<div class="container">
+			<div class="wrap spaces">
+				<div class="fix-10-12 left">
+					<h1 class="">Våra policys</h1>
+					<div class="text-58">
+						<h2 class="text-58">Miljö</h2>
+									<p class="small">
+									Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
+									<br>
+									<br>
+									I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
+									<br>
+									<br>
+									Våra miljömål ska baseras på vår miljöpåverkan, kontinuerligt följas upp och anpassas till verksamheten.
+									<br>
+									<br>
+									Råvaror och energi ska utnyttjas så effektivt som möjligt. Återanvändning och återvinning skall underlättas.
+									<br>
+									<br>
+									Alla anställda är väl informerade om hur vi tillsammans kan påverka och förbättra miljön omkring oss. Genom denna inriktning vill vi bidra till en bättre omvärld samt göra företaget mer attraktivt för anställda, samarbetspartners samt kunder.
+									</p>
+					</div>
+					<h3 class="text-58">Jämställdhet</h3>
+					<div class="margin-bottom-5">
+								<li class="col-12-12">
+									<h3>Besiktningsman.se Sverige AB arbetar strategiskt med att organisera och leda verksamheten utifrån grundsynen om alla människors lika värde.
+											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
+								</li>
+								<li class="col-12-12">
+									<p class="small">
+										Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
+										<br>
+										<br>
+										Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
+										<ul>
+											<li><p class="small">• Man – Kvinna</p></li>
+											<li><p class="small">• Ung – Gammal</p></li>
+											<li><p class="small">• Olika kulturella bakgrunder</p></li>
+											<li><p class="small">• Olika kompetenser</p></li>
+											<li><p class="small">• Geografisk spridning</p></li>
+										</ul>
+										<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
+									</p>
+								</li>
+					</div>
+					<a class="button round white small" data-popup-action="close">Stäng</a>
+				</div>
 			</div>
 		</div>
-		<form action="ajax-email.php" method="post" autocomplete="on">
-			<ul>
-				<li><input type="email" autocomplete="on" placeholder="Din e-postadress" /></li>
-				<li class="indigo" data-type="submit">OK</li>
-			</ul>
-		</form>
 	</div>
-	<!-- Preloader -->
-	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
-	<!-- Panel Bottom #22 -->
+</div>
 
 </body>
 
