career link fix

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <ul class="menu crop small bold">
         <li><a href="#">Vårt erbjudande</a></li>
         <li><a href="#">Nyheter</a></li>
-        <li><a href="#">Karriär</a></li>
+        <li><a href="karriar/">Karriär</a></li>
       </ul>
     </div>
     <div class="center"><a href="/"> <img src="assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;">  </a></div>
